[package]
name = "jadl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
curl = {version = "0.4"}
termios = { version = "0.3" }
toml = { version = "0.7.6" }
serde = { version = "1.0.183" }
serde_derive = { version = "1.0.183" }

# This will need to get changed when 
libmpv-sirno = {version = "2.0.2-fork.1"}
